# radcalnet_oc

./: pyproject.toml
radcalnet_oc/: __init__.py  aeronet_oc.py  config.yml  kernel.py  lut.py  process.py
radcalnet_oc/data/lut/atmo/: transmittance_lut_opac_wind_v3.nc
radcalnet_oc/data/template/: intput_data_template.yml
