# pyproject.toml
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radcalnet_oc"
version = "0.0.1"
description = "Processor to simulate top-of-atmosphere radiance signal above AERONET-OC sites"
readme = "pypi_README.rst"
authors = [{ name = "Tristan Harmel", email = "tristan.harmel@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Sentinel-2","Landsat-8","Landsat-9", "EO satellite"]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"radcalnet_oc"= ['*.yml',
                 'data/lut/gases/*.nc',
                 'data/lut/atmo/*.nc',
                 'data/auxdata/*']

[tool.setuptools.exclude-package-data]
"*" = [".gitattributes"]

[project.scripts]
radcalnet_oc = "radcalnet_oc.run:main"

#dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Tristanovsk/radcalnet_co"
Documentation = "https://radcalnet-oc.readthedocs.io"